tests/samples/negative/generics/where_resource_capability.ax
module where_resource_capability;

fn id[T](value: T) -> T where T: Copy {
    return value;
}

fn main() -> i32 {
    return id(1);
}
